<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="addData"
            type="com.example.yugan.savedata.add.AddViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".add.AddActiviity"
        android:background="#fff">

        <ImageView
            android:id="@+id/imgSecret"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/secret2"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txtName"
            style="@style/txtAdd"
            android:text="@string/name"
            app:layout_constraintTop_toBottomOf="@+id/imgSecret"/>

        <EditText
            android:id="@+id/etxtName"
            style="@style/etxtAdd"
            android:hint="@string/name_hint"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <TextView
            android:id="@+id/txtUser"
           style="@style/txtAdd"
            android:text="@string/user_id"
            app:layout_constraintTop_toBottomOf="@+id/etxtName" />

        <EditText
            android:id="@+id/etxtUser"
            style="@style/etxtAdd"
            android:hint="@string/user_id_hint"
            app:layout_constraintTop_toBottomOf="@+id/txtUser" />

        <TextView
            android:id="@+id/txtPsd"
            style="@style/txtAdd"
            android:text="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/etxtUser" />

        <EditText
            android:id="@+id/etxtPsd"
            style="@style/etxtAdd"
            android:hint="@string/password_hint"
            app:layout_constraintTop_toBottomOf="@+id/txtPsd"
            />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addd"
            app:layout_constraintTop_toBottomOf="@+id/etxtPsd"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_add_bg"
            android:onClick="@{()->addData.addDetails()}"
            android:layout_marginEnd="15dp" />
    </android.support.constraint.ConstraintLayout>
</layout>